# vaxstats

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  LICENSE.md  Makefile  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: build.yml  codecov.yml  tests.yml
docs/: .pages  gen_ref_pages.py
docs/commands/: .pages  analyze.md  forecast.md  index.md  peak.md  prep.md
docs/css/: base.css
docs/examples/: e01.ipynb  e02.md
tests/: conftest.py  test_df_prep.py  test_forecast.py  test_plots.py  test_stats.py  test_utils.py
tests/files/: example.xlsx  example_forecast.csv  example_prepped.csv  test-m3924.csv  test-m9324-forecast.csv  test-m9324.xlsx
vaxstats/: __init__.py  cli.py  forecast.py  io.py  log.py  plots.py  stats.py  utils.py
vaxstats/analysis/: forecast.py  hourly.py  residual.py  stats.py  timeframe.py
workflows/: tests.yml
