[project]
authors = [
    {name = "OASCI", email = "us@oasci.org"}
]
maintainers = [
    {name = "Alex Maldonado", email = "alex@oasci.org"}
]
description = "Help with statistical forecasting models for vaccine studies."
name = "vaxstats"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "polars>=1.12.0,<2",
    "loguru>=0.7.2,<0.8",
    "statsforecast>=1.7.8,<2",
    "xlsx2csv>=0.8.3,<0.9",
    "pandas>=2.2.3,<3",
    "matplotlib>=3.9.2,<4",
    "pyyaml>=6.0.2,<7",
    "fastexcel>=0.12.0,<0.13",
]

[project.scripts]
vaxstats = "vaxstats.cli:main"

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["vaxstats"]
